# HydroMassNet

./: .gitignore  BNN_model.h5  BNN_model.keras  DBNN_model.h5  DBNN_model.keras  README.en.md  README.es.md  README.md  README.pt.md  README_es.md  README_pt.md  bayesian_model.py  config.yaml  download_dataset.py  evaluate.py  main.py  predict.py  pyproject.toml  requirements.txt  run_champions.py  run_color_plot.py  run_pipeline.py  train.py  train_final.py  vanilla.py
class/: lr_history.py
config/: config.yaml
data/: hydromassnet_processed.csv
func/: data_preprocessing.py  plot.py  set_seed.py  train.py  utils.py
model/: baseline.py  bayesian_dense_layer.py  bayesian_dense_network.py  bayesian_dense_network_regression.py  bayesian_dense_regression.py  bayesian_density_network.py  bayesian_model.py  vanilla.py
model/model/: bayesian_dense_layer.py  bayesian_dense_network.py  bayesian_dense_regression.py  bayesian_density_network.py
results/: baseline_history.csv  baseline_predictions.csv  bnn_history.csv  bnn_predictions.csv  dbnn_history.csv  dbnn_predictions.csv  scaler_x.pkl  scaler_y.pkl  vanilla_history.csv  vanilla_predictions.csv
results/feature_selection/: feature_selection_report_20250906_171233.csv
results/hyperparameter_search/: champion_config.yaml  full_search_report_20250906_171536.csv
results/models/: baseline.weights.h5  bnn.weights.h5  dbnn.weights.h5  vanilla.weights.h5
results/saved_models/: bnn.weights.h5  bnn_history.csv
results/search_results/: champion_config.yaml  feature_selection_results_20250905_123923.csv  full_report_20250905_215514.csv
scripts/: build_master_dataset.py  download_dataset.py  feature_selection.py  hyperparameter_search.py  plot_feature_selection.py  plot_publication_figures.py  run_full_optimization.py
src/: baseline.py  data.py  download_dataset.py  evaluate.py  evaluate_final.py  feature_selection.py  hyperparameter_search.py  plot.py  plotting.py  predict.py  preprocess.py  run_full_optimization.py  train.py  train_final.py  train_utils.py
src/hydromassnet/: data.py  download_dataset.py  models.py  plotting.py  preprocess.py
src/models/: bayesian_dense_layer.py  data.py  (+4 more)
(+16 files in other folders)
