[tool.poetry]
name = "hydromassnet"
version = "0.1.0"
description = "This project focuses on developing Bayesian neural networks to identify the percentage of neutral hydrogen mass in galaxies."
authors = ["Joelson Sartori Junior <joelsonsartori@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
scikit-learn = "^1.5.0"
catboost = "^1.2.5"
seaborn = "^0.13.2"
tensorflow = "^2.16.1"
keras = "^3.3.3"
tensorflow-probability = { extras = ["tf"], version = "^0.24.0" }
numpy = "^1.26.4"
tqdm = "^4.66.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
