[tool.poetry]
name = "hydromassnet"
version = "1.0.0"
description = "Bayesian neural networks to identify the percentage of neutral hydrogen mass in galaxies."
authors = ["Joelson Sartori Junior <joelsonsartori@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}] # <-- CORREÇÃO APLICADA AQUI

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
tensorflow = "^2.12.0"
tensorflow-probability = "^0.20.1"
scikit-learn = "^1.3.0"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
pandas = "^2.0.3"
numpy = "^1.25.2"
tqdm = "^4.66.1"
pyyaml = "^6.0.1"
joblib = "^1.3.2"
catboost = "^1.2"
astroquery = "^0.4.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
